[project]
name = "example_package_hyuaisl"
version = "0.0.1"
authors = [
  { name="HYU AISL", email="choye@hanyang.ac.kr" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hyuaisl/sampleproject"
Issues = "https://github.com/hyuaisl/sampleproject/issues"